exam report 09/2-0-ft_strspn.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z3r6p15.42.us.org
Darwin 17.4.0 x86_64
$> date
Tue Jul  2 09:43:43 PDT 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 10.0.0 (clang-1000.10.44.4)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 10.0.0 (clang-1000.10.44.4)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20190702/lusanche

= Git history ==================================================================
$> git -C /var/folders/p7/nrk0npln3wz1cjx1tnk1d2bc0000gp/T/tmpkAfxD7/user log --pretty='%H - %an, %ad : %s'
2382d672e972944cf7c5b4d6499f185cb0ae1633 - Exam 42, Tue Jul 2 09:43:16 2019 -0700 : ft_strspn
b87162a4249e750f7f8627983fc800ab52de194a - Exam 42, Tue Jul 2 09:17:35 2019 -0700 : ulstr
251f51dbefc260c6413db9a9c250ef76ef2ee2da - Exam 42, Tue Jul 2 09:09:10 2019 -0700 : aff_z
 
= Collected files ==========================================
$> ls -lAR /var/folders/p7/nrk0npln3wz1cjx1tnk1d2bc0000gp/T/tmpkAfxD7/user
total 8
-rw-r--r--  1 deepthought  deepthought  676 Jul  2 09:43 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Jul  2 09:43 aff_z
drwxr-xr-x  3 deepthought  deepthought  102 Jul  2 09:43 ft_strspn
drwxr-xr-x  3 deepthought  deepthought  102 Jul  2 09:43 ulstr

/var/folders/p7/nrk0npln3wz1cjx1tnk1d2bc0000gp/T/tmpkAfxD7/user/aff_z:
total 8
-rw-r--r--  1 deepthought  deepthought  967 Jul  2 09:43 aff_z.c

/var/folders/p7/nrk0npln3wz1cjx1tnk1d2bc0000gp/T/tmpkAfxD7/user/ft_strspn:
total 8
-rw-r--r--  1 deepthought  deepthought  1126 Jul  2 09:43 ft_strspn.c

/var/folders/p7/nrk0npln3wz1cjx1tnk1d2bc0000gp/T/tmpkAfxD7/user/ulstr:
total 8
-rw-r--r--  1 deepthought  deepthought  1196 Jul  2 09:43 ulstr.c
 
= ft_strspn ====================================================================
$> gcc -Wextra -Wall -Werror main.c ft_strspn.c -o user_exe 
ft_strspn.c:13:1: error: unknown type name 'size_t'
size_t  ft_strspn(const char *s, const char *accept)
^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
